# Foundation_group

./: README.md
First_Project/: First_Project.cbp  First_Project.depend  First_Project.layout  if else.c  main(1).cpp  main.cpp
First_Project/2 project/: 2 project.cbp  2 project.depend  2 project.layout  main.cpp
First_Project/PDP exam/: PDP exam.cbp  PDP exam.depend  PDP exam.layout  main.cpp
First_Project/exam/: exam.cbp  exam.depend  exam.layout  main.cpp
First_Project/exam 2m/: exam 2m.cbp  exam 2m.depend  exam 2m.layout  main.cpp
First_Project/test/: main.cpp  test.depend  test.layout
First_Project/test/CMakeProject2/: CMakeLists.txt  CMakeProject2.cpp  CMakeProject2.h
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj  Source.cpp
Project1/Project1/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Project1/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
